# orthanc-neuro

./: AUTHORS  CMakeLists.txt  NEWS  README  TODO
Resources/: SyncOrthancFolder.py
Resources/CMake/: NiftiCLib.cmake
Sources/Framework/: BufferReader.cpp  BufferReader.h  CSAHeader.cpp  CSAHeader.h  CSATag.cpp  CSATag.h  DicomInstancesCollection.cpp  DicomInstancesCollection.h  IDicomFrameDecoder.cpp  IDicomFrameDecoder.h  InputDicomInstance.cpp  InputDicomInstance.h  NeuroEnumerations.h  NeuroToolbox.cpp  NeuroToolbox.h  NiftiWriter.cpp  NiftiWriter.h  Slice.cpp  Slice.h
Sources/Plugin/: OrthancExplorer.js  Plugin.cpp  PluginFrameDecoder.cpp  PluginFrameDecoder.h
Sources/UnitTestsSources/: NiftiTests.cpp  UnitTestsMain.cpp
